--- a/app/view/ortodromia/senzawaypoints/senzawaypoints.css
+++ b/app/view/ortodromia/senzawaypoints/senzawaypoints.css
@@ -14,4 +14,39 @@ Image{
     border-radius: 34px;
 }
 
+@keyframes animaBack {
+    from {background-color: antiquewhite;}
+    to {background-color: darkslateblue;}
+}
+
+.animato{
+    animation-name: animaBack;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+}
+
+@keyframes animaRuota {
+    from{transform: rotate(0deg);}
+    to{transform: rotate(360deg);}
+}
+.animatoRuota{
+    animation-name: animaRuota;
+    animation-duration: 5s;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
+}
+
+@keyframes animaBackLosso {
+    from{background-color: white;}
+    to{background-color: #aaeee4;}
+}
+
+.animatoLosso{
+    animation-name: animaBackLosso;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+}
+
 
