--- a/app/view/lossodromia/primoProblema/primoProblema.css
+++ b/app/view/lossodromia/primoProblema/primoProblema.css
@@ -35,5 +35,5 @@ Image{
     animation-name: animaRuota;
     animation-duration: 5s;
     animation-fill-mode: both;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
 }
