--- a/app/view/ortodromia/senzawaypoints/senzawaypoints.css
+++ b/app/view/ortodromia/senzawaypoints/senzawaypoints.css
@@ -34,7 +34,7 @@ Image{
     animation-name: animaRuota;
     animation-duration: 5s;
     animation-fill-mode: both;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
 }
 
 @keyframes animaBackLosso {
