--- a/App_Resources/Android/src/main/res/drawable-nodpi/splash_screen.xml
+++ b/App_Resources/Android/src/main/res/drawable-nodpi/splash_screen.xml
@@ -1,8 +1,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="fill">
     <item>
-        <bitmap android:gravity="fill" android:src="@drawable/background" />
+        <color android:color="#1A3157"/>
     </item>
     <item>
-        <bitmap android:gravity="center" android:src="@drawable/logo" />
+        <bitmap android:gravity="center" android:src="@drawable/logo_nav" />
     </item>
 </layer-list>
