--- a/App_Resources/Android/src/main/res/values/styles.xml
+++ b/App_Resources/Android/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <!-- theme to use FOR launch screen-->
     <style name="LaunchScreenThemeBase" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="toolbarStyle">@style/NativeScriptToolbarStyle</item>
+        <item name="android:forceDarkAllowed">false</item>
 
         <item name="colorPrimary">@color/ns_primary</item>
         <item name="colorPrimaryDark">@color/ns_primaryDark</item>
